fix font clipping lukebtaylor/tech-radar.lukebtaylor.com.private@b82e48858eb111676c80bc0d5e53f96722e1989e

--- a/fonts.css
+++ b/fonts.css
@@ -9,3 +9,7 @@
     src: url("fonts/Open_Sans/OpenSans-VariableFont_wdth,wght.ttf");
     font-weight: 300;
 }
+
+.chart .tooltip::before {
+    height: auto !important;
+}
